# cava-data

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _config.yaml  cadai-deployment.yml  cava-data-0.1.0.tgz  cava-data-0.1.1.tgz  cava-data-0.1.2-rc.1.tgz  cava-data-0.1.2-rc.10.tgz  cava-data-0.1.2-rc.11.tgz  cava-data-0.1.2-rc.12.tgz  cava-data-0.1.2-rc.13.tgz  cava-data-0.1.2-rc.14.tgz  cava-data-0.1.2-rc.15.tgz  cava-data-0.1.2-rc.16.tgz  cava-data-0.1.2-rc.17.tgz  cava-data-0.1.2-rc.18.tgz  cava-data-0.1.2-rc.19.tgz  cava-data-0.1.2-rc.2.tgz  cava-data-0.1.2-rc.20.tgz  cava-data-0.1.2-rc.21.tgz  cava-data-0.1.2-rc.22.tgz  cava-data-0.1.2-rc.23.tgz  cava-data-0.1.2-rc.24.tgz  cava-data-0.1.2-rc.25.tgz  cava-data-0.1.2-rc.26.tgz  cava-data-0.1.2-rc.27.tgz  cava-data-0.1.2-rc.28.tgz  cava-data-0.1.2-rc.29.tgz  cava-data-0.1.2-rc.3.tgz  cava-data-0.1.2-rc.30.tgz  cava-data-0.1.2-rc.31.tgz  cava-data-0.1.2-rc.32.tgz  cava-data-0.1.2-rc.33.tgz  cava-data-0.1.2-rc.34.tgz  cava-data-0.1.2-rc.35.tgz  cava-data-0.1.2-rc.36.tgz  cava-data-0.1.2-rc.37.tgz  (+38 more)
.ci-helpers/secrets/: dev-test.yaml
.github/workflows/: build-worker.yaml  build.yaml  deploy-chart.yaml  pr.yaml  test-chart.yaml
app/: main.py  models.py
app/api/: main.py  utils.py
app/api/endpoints/: __init__.py  data.py  download.py  ship_data.py
app/api/workers/: data_fetcher.py  models.py  tasks.py
app/cache/: redis.py
app/core/: celery_app.py  celeryconfig.py  config.py
app/scripts/: __init__.py  baseloader.py  catalog_loader.py  dataset_loader.py  shipdata_loader.py
cadai/: main.py  models.py  scripts.py  store.py
cadai/api/: main.py  utils.py
cadai/api/endpoints/: data.py  download.py  ship_data.py
cadai/api/endpoints/utils/: helpers.py
cadai/api/workers/: __init__.py  data_fetcher.py
cadai/core/: config.py
cadai/scripts/: __init__.py
cadai/templates/: index.html
cava_data/: cli.py  main.py  models.py
cava_data/api/: main.py
cava_data/api/endpoints/: __init__.py  data.py  ship_data.py
cava_data/api/workers/: data_fetcher.py  models.py  tasks.py
cava_data/cache/: redis.py
cava_data/core/: celery_app.py  celeryconfig.py  config.py
cava_data/scripts/: __init__.py  baseloader.py  shipdata_loader.py
resources/aws/: .dockerignore  .env.example  .gitignore  README.md  cdk.json  package-lock.json  package.json  requirements.txt
resources/aws/cdk/: app.py  config.py
resources/aws/lambda/: Dockerfile  handler.py
resources/docker/: Dockerfile  docker-compose.yaml  worker.dockerfile
resources/helm/: .gitignore  chartpress.yaml
resources/helm/cava-data/: Chart.yaml  values.yaml
resources/helm/cava-data/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  rbac.yaml  service.yaml  worker-deployment.yaml
