[metadata]
name = cava_data
maintainer = Landung Setiawan
maintainer_email = landungs@uw.edu
description = Cabled Array Data Access Interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cormorack/cava-data
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
author = Landung Setiawan
author_email = landungs@uw.edu
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
  blosc
  cytoolz
  lz4
  fastapi
  aiofiles
  uvicorn
  gunicorn
  gevent
  redis
  aioredis
  msgpack
  kombu
  xarray
  zarr
  dask
  dask-kubernetes
  netcdf4
  s3fs==2022.02.0
  fsspec
  aiobotocore
  intake
  intake-xarray
  jinja2==3.0.3
  numcodecs
  datashader
  hvplot
  numba
  numpy
  xlrd
  pyarrow
  bottleneck
  toolz
  gspread
  loguru
  celery[sqs]
  pika
  prometheus-fastapi-instrumentator
  watchgod
  pycurl<7.45
  setuptools<59
  wheel>=0.29.0
python_requires = >=3.8
setup_requires =
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
lint =
    black
    check-manifest
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    pylint
docs =
    sphinx
    sphinx-automodapi
all =
    %(test)s
    %(lint)s
    %(docs)s

[options.entry_points]
console_scripts =
    cava_data = cava_data.cli:serve
    cava_data_worker = cava_data.cli:worker
