[metadata]
name = cava_data
maintainer = Landung Setiawan
maintainer_email = landungs@uw.edu
description = Cabled Array Data Access Interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cormorack/cava-data
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
author = Landung Setiawan
author_email = landungs@uw.edu
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
  blosc
  cytoolz
  lz4
  fastapi
  aiofiles
  redis>=4.2
  msgpack
  kombu
  xarray
  zarr
  dask
  netcdf4
  s3fs==2022.02.0
  fsspec
  intake
  intake-xarray
  jinja2==3.0.3
  numcodecs
  numpy
  xlrd
  bottleneck
  toolz
  gspread
  loguru
  celery[sqs]
  pika
  prometheus-fastapi-instrumentator
python_requires = >=3.8
setup_requires =
    setuptools_scm

[options.extras_require]
ship = 
    pyarrow
worker = 
    datashader
    hvplot
    numba
    gevent
    dask_kubernetes
    distributed
server =
    uvicorn
    gunicorn
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-xdist
    pytest-mock
    watchgod
lint =
    black
    check-manifest
    flake8
    flake8-builtins
    flake8-comprehensions
    flake8-mutable
    flake8-print
    isort
    mypy
    numpydoc
    pre-commit
    pylint
docs =
    sphinx
    sphinx-automodapi
all =
    %(test)s
    %(lint)s
    %(docs)s
    %(worker)s
    %(ship)s

[options.entry_points]
console_scripts =
    cava_data = cava_data.cli:serve
    cava_data_worker = cava_data.cli:worker
